--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -2,27 +2,57 @@ body {
     padding-top: 5rem;
     background-color: #f0f8ff;
 }
-.pro{
-        background-color: white;
-        border-style: solid;
-        border-width: 4px;
-        border-top-color: #007bff;
-        border-left-color:  white;
-        border-right-color: white;
-        border-bottom-color: white;
-        border-radius: 5px;
-        margin-right: 30%;
-        margin-left: 20%;
-        padding: 10px;
-        padding-left: 20px;
-        box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-        min-height:100px;
-        display: grid;
+.prof{
+  background-color: white;
+    border-style: solid;
+    border-width: 4px;
+    border-top-color: #007bff;
+    border-left-color:  white;
+    border-right-color: white;
+    border-bottom-color: white;
+    border-radius: 5px;
+    margin-right: 20%;
+    margin-left: 20%;
+    padding: 10px;
+    padding-left: 20px;
+    box-shadow:0 1px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    display:flex;
+    align-items: center;
     }
 
-label {
-    font-weight: bold;
+.pro{
+    background-color: white;
+    border-style: solid;
+    border-width: 4px;
+    border-top-color: #007bff;
+    border-left-color:  white;
+    border-right-color: white;
+    border-bottom-color: white;
+    border-radius: 5px;
+    margin-right: 20%;
+    margin-left: 20%;
+    padding: 10px;
+    padding-left: 20px;
+    box-shadow:0 1px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    min-height:100px;
+    display:grid;
 }
+.proP{
+    background-color: white;
+    border-style: solid;
+    border-width: 4px;
+    border-top-color: #007bff;
+    border-left-color:  white;
+    border-right-color: white;
+    border-bottom-color: white;
+    border-radius: 5px;
+    margin-right: 20%;
+    margin-left: 20%;
+    padding: 12px;
+    padding-left: 25px;
+    display:grid;
+}
+
 .info{
     display: inline-block;
     margin:0;
@@ -32,17 +62,25 @@ label {
     margin-left: 20%;
     font-weight: bold;
 }
-
 .btn-v{
     border-radius: 4px;
     background-color: #32CD32;
     color: white;
     border-width: 0px;
     width: 130px;
-    margin-left: 70%;
     text-align: center;
+    margin-left: 20%;
 }
 
+#btn
+{
+  border-radius: 5px;
+    background-color: #32CD32;
+    color: white;
+    border-width:  1px;
+    width: 120px;
+
+}
 
 .bio{
     border: solid 1px white;
@@ -68,7 +106,9 @@ label {
     border-width: 0px;
     width: 150px;
 }
-
+label{
+    font-weight: bold;
+}
 .prob{
     display:flex;
     align-items: center;
